--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,5 @@ services:
   - type: web
     name: toadbot
     env: python
-    plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "python main.py"
+    buildCommand: ""
+    startCommand: python bot.py
