--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@ services:
     name: toadbot
     env: python
     buildCommand: ""
-    startCommand: python main.py
+    startCommand: python bot.py
