--- a/klucz.env
+++ b/klucz.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTQwMTIzMjk4MDAyMTc0MzY0Ng.G61jXZ.gpHZAqRBRLdWnqmoQ6x7dADjtEoEZcSWlIYXq0
+DISCORD_TOKEN=MTQwMTIzMjk4MDAyMTc0MzY0Ng.GG11FO.PHzBYUyyQHVUqS9IvTfe6SUXN2wBHQ_76QwgLI
